<resources>
    <string name="app_name">SensoresInternosWifiSW</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="ReleaseDate">27/10/2021</string>

    <string name="ERROR_FICHERO">Error opening file</string>
    <string name="title_activity_sensado">Sensado</string>

    <string name="Gyroscope">Gyroscope</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="Magnetometer">Magnetometer</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="Options">Options</string>
    <string name="StartSensing">Start</string>

    <string name="channel_name">CANAL_NOTIFICACION</string>
    <string name="channel_description">Channel for notifications</string>
    <string name="Stop">Stop</string>
    <string name="FASTEST_ON">Fastest ON</string>
    <string name="title_activity_options">Options</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="ServerIP">Server IP</string>
    <string name="Port">Port Number</string>
    <string name="Save">Save</string>
    <string name="Options_saved">Options saved</string>
    <string name="Incorrect_IP">Incorrect IP</string>
    <string name="Incorrect_Port">Incorrect port</string>
    <string name="Wifi">Send data (Wifi)</string>
    <string name="Data_Window">Data window (ms):</string>
    <string name="Send_Period">Send period (s):</string>
    <string name="Options_Error">Number formar error</string>
    <string name="Threshold">Threshold</string>
    <string name="Vibrate">Vibrate</string>
    <string name="SaveSensedData">Save sensed data</string>
    <string name="SubjectName">Subject name</string>

    <string name="defaultServerIP">150.214.59.23</string>
    <string name="defaultSubject">Subject_1</string>
    <string name="Barometer">Barometer</string>
    <string name="FTP">FTP</string>
    <string name="DirectSend">Direct send</string>
    <string name="FTPPort">21</string>
    <string name="DirectSendPort">8000</string>

    <string name="DefaultSendPeriod">60</string>
    <string name="DefaultWindowsSize">3000</string>
</resources>